-Rajout databinding + navigator + page pour recherche

--- a/GameReader/app/src/main/res/values/strings.xml
+++ b/GameReader/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">GameReader</string>
     <string name="action_settings">Settings</string>
+    <string name="app_label">Label</string>
+    <string name="search_hint">hint</string>
+    <string name="search_game">Recherche game</string>
 </resources>
