--- a/GameReader/app/src/main/res/values/strings.xml
+++ b/GameReader/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="app_label">Label</string>
     <string name="search_hint">hint</string>
     <string name="search_game">Recherche game</string>
+    <string name="rechercher_un_jeu">Rechercher un jeu</string>
 </resources>
